--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.22.0
   flutter_riverpod: ^2.4.5
+  firebase_auth: ^4.13.0
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
