--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: '>=3.2.0 <4.0.0'
 
 
 dependencies:
@@ -16,14 +16,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.22.0
-  flutter_riverpod: ^2.4.5
-  firebase_auth: ^4.13.0
+  firebase_core: ^2.24.2
+  flutter_riverpod: ^2.4.9
+  firebase_auth: ^4.15.2
   get: ^4.6.6
   dropdown_button2: ^2.3.9
-  path_provider: ^2.1.1
+  audio_waveforms: ^1.0.4
   file_picker: ^6.1.1
-  just_audio: ^0.9.36
+  path_provider: ^2.1.1
+  http: ^1.1.2
 
 
 dev_dependencies:
@@ -31,7 +32,7 @@ dev_dependencies:
     sdk: flutter
 
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -48,6 +49,12 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/images/logo.png
+   - assets/audios/audio1.mp3
+   - assets/audios/audio2.mp3
+   - assets/audios/audio3.mp3
+   - assets/audios/audio4.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
