--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   file_picker: ^6.1.1
   path_provider: ^2.1.1
   http: ^1.1.2
+  flutter_native_splash: ^2.3.8
 
 
 dev_dependencies:
@@ -51,7 +52,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/logo.png
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
