some frontend, backend changes along with some cleanups

--- a/python_server/requirements.txt
+++ b/python_server/requirements.txt
@@ -5,3 +5,11 @@ langchain
 unstructured
 python-pptx
 openai
+vosk 
+librosa 
+pydub 
+praat-parselmouth 
+pyworld 
+nltk 
+textstat
+SpeechRecognition
